# data_api

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  config.toml  install-packages.sh  pyproject.toml
data_api/: auth.py  deps.py  lib_cfg.py  lib_mail.py  lib_misc.py  lib_parse.py  lib_voc.py  main.py  models.py
data_api/routers/: collections.py  documents.py  formats.py  pdf.py  upload.py  users.py
ressources/: ecli_document_schema.sql  tags_schema.sql
ressources/schema_updates/: add_appeal.sql  add_counters.sql  add_lang.sql  add_links.sql  add_status.sql
static/: qrcode.js
templates/: default_doc.tex  mail_doc_create.html  mail_doc_publish.html  share.html
test/: test_libvoc.py
